2010-04-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/lisp.el (lisp-completion-at-point): Complete around point.
	I.e. include text after point in the completion region.
	Also, return nil when we're not after/in a symbol.

	* international/mule-cmds.el (view-hello-file): Don't fiddle with the
	default enable-multibyte-characters.

2010-04-19  Stefan Monnier  <monnier@iro.umontreal.ca>

	* international/mule.el: Help the user choose a valid coding-system.
	(read-buffer-file-coding-system): New function.
	(set-buffer-file-coding-system): Use it.  Prompt the user if the
	coding-system cannot encode all the chars.

	* vc-bzr.el: Use standard *vc* and *vc-diff* buffers.
	(vc-bzr-shelve-show, vc-bzr-shelve-apply)
	(vc-bzr-shelve-apply-and-keep, vc-bzr-shelve-snapshot):
	Don't use *vc-bzr-shelve*.

2010-04-19  Chong Yidong  <cyd@stupidchicken.com>

	* cedet/ede/pmake.el (ede-proj-makefile-insert-variables):
	Don't destroy list before using it.

2010-04-19  Dan Nicolaescu  <dann@ics.uci.edu>

	Fix the version number for added files.
	* vc-hg.el (vc-hg-working-revision): Check if the file is
	registered after hg parent fails (Bug#5961).

2010-04-19  Glenn Morris  <rgm@gnu.org>

	* htmlfontify.el (htmlfontify-buffer)
	(htmlfontify-copy-and-link-dir): Autoload entry points.

2010-04-19  Magnus Henoch  <magnus.henoch@gmail.com>

	* vc-hg.el (vc-hg-annotate-extract-revision-at-line): Expand file
	name relative to the project root (Bug#5960).

2010-04-19  Glenn Morris  <rgm@gnu.org>

	* vc-git.el (vc-git-print-log): Doc fix.

2010-04-19  Óscar Fuentes  <ofv@wanadoo.es>

	* ido.el (ido-file-internal): Fix 2009-12-02 change.

2010-04-19  Christoph  <cschol2112@googlemail.com>  (tiny change)

	* progmodes/grep.el (grep-compute-defaults): Fix handling of host
	default settings (Bug#5928).

2010-04-19  Glenn Morris  <rgm@gnu.org>

	* progmodes/fortran.el (fortran-match-and-skip-declaration):
	New function.
	(fortran-font-lock-keywords-3): Use it.  (Bug#1385)
